--- a/catalog/index.html
+++ b/catalog/index.html
@@ -20,7 +20,39 @@
                     <div class="hidden xl:flex items-center justify-between space-x-4">
                         <a href="../index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Главная</a>
                         <a href="../about/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">О компании</a>
-                        <a href="../catalog/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer border-b border-gray-700">Каталог</a>
+                        <div class="relative">
+                            <button onclick="toggleDropdown()" class="flex items-center justify-between font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">
+                                Каталог<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                                  </svg>
+                            </button>
+                            <div id="dropdown-catalog" class="hidden absolute bg-catalog-dropdown w-64 left-16 p-3 z-10">
+                                <a href="/catalog/index.html" class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 mt-2 hover:cursor-pointer">
+                                    <span>Endress+Hauser</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                                <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
+                                    <span>Keb</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                                <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
+                                    <span>Satec</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                                <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
+                                    <span>Modcon</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                                <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
+                                    <span>Wika</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                                <a class="dropdown-item flex items-center justify-between text-white uppercase hover:underline w-full p-3 hover:cursor-pointer">
+                                    <span>Supcon</span>
+                                    <img class="hidden" src="../imgs/arrow-long-right-white.svg" >
+                                </a>
+                            </div>
+                        </div>
                         <a href="../service/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Услуги</a>
                         <a href="../reference-list/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Референс</a>
                         <a href="../survey-list/index.html" class="font-light text-gray-700 hover:border-1 hover:cursor-pointer hover:border-b hover:border-gray-700">Опросные</a>
@@ -51,7 +83,7 @@
     
     <section class="bg-white">
         <div class="container-sm py-20">
-            <div class="grid md:grid-rows-3 grid-cols-3 grid-flow-row gap-1">
+            <div class="grid md:grid-rows-3 md:grid-cols-3 grid-cols-2 grid-flow-row gap-1">
                 <a href="../products/index.html" class="md:row-span-2">
                     <div class="catalog-item bg-white shadow-lg h-full hover:cursor-pointer">
                         <div class="relative flex flex-col justify-between h-full">
@@ -153,17 +185,29 @@
                 </div>
                 <div id="carousel-objects" class="max-w-screen-lg mt-8 relative">
                     <div class="carousel-inner">
-                        <div class="carousel-slide-license">
+                        <div class="relative carousel-slide-object">
                             <img src="../imgs/erg.png" alt="Image 1" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">Eurasian Resources Group</p>
                         </div>
-                        <div class="carousel-slide-license">
+                        <div class="relative carousel-slide-object">
                             <img src="../imgs/kazakhmys.png" alt="Image 2" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">казахмыс</p>
                         </div>
-                        <div class="carousel-slide-license">
+                        <div class="relative carousel-slide-object">
                             <img src="../imgs/kazatomprom.png" alt="Image 2" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">казатом</p>
                         </div>
-                        <div style="opacity: 0;" class="carousel-slide-license">
-                            <img src="../imgs/kazatomprom.png" alt="Image 2" class="w-full h-full object-cover">
+                        <div style="opacity: 0;" class="relative carousel-slide-object">
+                            <img src="../imgs/samruk-kazyna.png" alt="Image 2" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">самрук казына</p>
+                        </div>
+                        <div style="opacity: 0;" class="relative carousel-slide-object">
+                            <img src="../imgs/samruk-energy.png" alt="Image 2" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">самрук энерджи</p>
+                        </div>
+                        <div style="opacity: 0;" class="relative carousel-slide-object">
+                            <img src="../imgs/kazmunai.png" alt="Image 2" class="w-full h-full object-cover">
+                            <p class="hidden absolute bottom-2 left-2 text-white font-semibold uppercase text-sm">казмунай газ</p>
                         </div>
                     </div>
                 </div>
